--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "official_web",
+  "name": "company_web",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -25,10 +25,12 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.0.3",
+    "node-sass": "^4.9.0",
     "prettier": "^2.4.1",
-    "vue-template-compiler": "^2.6.14",
     "sass": "1.32.13",
     "sass-loader": "10.1.1",
-    "node-sass": "^4.9.0"
+    "swiper": "^3.4.2",
+    "vue-awesome-swiper": "^3.1.3",
+    "vue-template-compiler": "^2.6.14"
   }
 }
